--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+body {
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+}
+
 .App {
   text-align: center;
 }
@@ -22,11 +30,25 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  width: 632px;
+  margin: 0 auto 16px;
+  height: 48px;
+
+  background: beige;
+  margin-bottom: 2px;
+  transform-origin: 50% 50%;
+  text-align: left;
+}
+
+.text {
+  color: black;
+}
+
+.item {
+  width: 200px;
+  border-radius: 5px;
+  height: 35px;
+  margin-bottom: 10px;
+  background: pink;
 }
