--- a/src/App.css
+++ b/src/App.css
@@ -4,51 +4,34 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
+  background-color: #faf6f3;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-weight: 400;
+}
+
+li {
+  list-style: none;
 }
 
 .App {
   text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-}
-
-.App-header {
-  background-color: #282c34;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 .box {
   width: 632px;
   margin: 0 auto 16px;
-  height: 48px;
-
-  background: beige;
+  min-height: 62px;
+  padding: 25px 20px;
+  background: #fff;
   margin-bottom: 2px;
   transform-origin: 50% 50%;
   text-align: left;
+  margin-bottom: 16px;
+  box-shadow: 0 1px 2px 0 rgba(183, 183, 183, 0.2);
 }
 
 .text {
   color: black;
-}
-
-.item {
-  width: 200px;
-  border-radius: 5px;
-  height: 35px;
-  margin-bottom: 10px;
-  background: pink;
+  font-size: 26px;
 }
