--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  height: 100vh;
+  height: 120vh;
   padding: 0;
   margin: 0;
   display: flex;
@@ -13,13 +13,59 @@ li {
   list-style: none;
 }
 
-.App {
-  text-align: center;
-  min-height: 100vh;
+label {
+  white-space: pre-wrap;
 }
 
-.box {
+input[type="button"] {
+  padding: 7px 48px;
+  min-width: 222px;
+  max-width: 100%;
+  margin-top: 8px;
+  background-color: #000;
+  color: #fff;
+  text-align: center;
+  border: 1px solid #000;
+  border-radius: 2px;
+  cursor: pointer;
+  text-decoration: none;
+  padding: 12px 24px;
+  background-repeat: no-repeat;
+  background-position: 12px 12px;
+  font-size: 16px;
+}
+
+header {
+  text-align: center;
+  height: 150px;
+  padding-top: 16px;
+  background-color: white;
+}
+
+header > p {
+  font: 32px sans-serif;
+  border-bottom: 4px black solid;
+}
+
+footer {
+  margin-top: 150px;
+  text-align: center;
+  height: 300px;
+  padding: 0 32px;
+  align-self: flex-end;
+  border-left: 100vw solid #f0f0f0;
+  border-right: 100vw solid #f0f0f0;
+  background: #f0f0f0;
+}
+
+.App {
+  text-align: center;
+  min-height: 90vh;
+}
+
+.step-container {
   width: 632px;
+  height: auto;
   margin: 0 auto 16px;
   min-height: 62px;
   padding: 25px 20px;
@@ -29,6 +75,7 @@ li {
   text-align: left;
   margin-bottom: 16px;
   box-shadow: 0 1px 2px 0 rgba(183, 183, 183, 0.2);
+  overflow: hidden;
 }
 
 .text {
